# screenshot-paginator

./: .gitignore  README.md  paginate_screenshot.py  pyproject.toml  web.py
