[project]
name = "screenshot-paginator"
version = "1.1.0"
description = "Intelligently split long screenshots into pages at natural breaks"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
]

[project.scripts]
paginate = "paginate_screenshot:main"
paginate-web = "web:main"
